[gd_scene load_steps=27 format=3 uid="uid://dgms5rfw7oerh"]

[ext_resource type="Script" uid="uid://c2ukdmvda4tyd" path="res://Shop.gd" id="1_a6rls"]
[ext_resource type="Texture2D" uid="uid://cgj6v3vokwxcq" path="res://Assets/Fleurple.png" id="2_8kdgp"]
[ext_resource type="PackedScene" uid="uid://dyufyesmk2fke" path="res://rectangleUpgrade.tscn" id="2_cf5fc"]
[ext_resource type="Texture2D" uid="uid://k445qe24h7xr" path="res://Assets/PhoneUpgradePlaceholderSmall.png" id="4_rpri1"]
[ext_resource type="PackedScene" uid="uid://ceiuanqbl5xa2" path="res://squareUpgrade.tscn" id="4_sp2lo"]
[ext_resource type="AudioStream" uid="uid://4ktnomf2wvoc" path="res://Assets/Audio Assets/telring background.mp3" id="5_2wwcs"]
[ext_resource type="Script" uid="uid://yf0den66377f" path="res://squares.gd" id="5_8kdgp"]
[ext_resource type="Texture2D" uid="uid://dogj7elpe6a5x" path="res://Assets/Buy_Box.png" id="8_myf4l"]
[ext_resource type="AudioStream" uid="uid://0mnyu5twmn7x" path="res://Assets/Audio Assets/Error.mp3" id="8_p5a0g"]
[ext_resource type="AudioStream" uid="uid://bldju47hdmayp" path="res://Assets/Audio Assets/YGM.mp3" id="9_xqmyw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tm4cm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o63ij"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
spread = 15.0
flatness = 0.5
gravity = Vector3(0, 98, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x3war"]
load_path = "res://.godot/imported/Upgrade_symbol_Phone.png-f1a3b3922104fdb525018fb65cc81177.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_iidqy"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(0, -1.5, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybjb"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(32, -1.5, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucqk5"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(64, -1.5, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5265"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(96, -1.5, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws3kj"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(128, -1.5, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve2yn"]
atlas = SubResource("CompressedTexture2D_x3war")
region = Rect2(160, -1.5, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myf4l"]
border_color = Color(0.8001019, 0.8001019, 0.8001019, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqmyw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5a0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myf4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sw5c6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msgp6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e23gp"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -388.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6rls")

[node name="FleurpleBackground" type="Sprite2D" parent="."]
position = Vector2(80, 181)
texture = ExtResource("2_8kdgp")

[node name="Rectangles" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 98.0
offset_right = 249.0
offset_bottom = 300.0

[node name="TelephoneUpgrade" parent="Rectangles" instance=ExtResource("2_cf5fc")]
unique_name_in_owner = true
layout_mode = 2
UpgradeName = "Telephone"
UpgradePrice = 10

[node name="telparts" type="GPUParticles2D" parent="Rectangles/TelephoneUpgrade"]
material = SubResource("CanvasItemMaterial_tm4cm")
emitting = false
amount = 15
texture = ExtResource("4_rpri1")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_o63ij")

[node name="EmailUpgrade" parent="Rectangles" instance=ExtResource("2_cf5fc")]
unique_name_in_owner = true
layout_mode = 2
UpgradeName = "Email"
UpgradePrice = 500

[node name="LotteryUpgrade" parent="Rectangles" instance=ExtResource("2_cf5fc")]
unique_name_in_owner = true
layout_mode = 2
UpgradeName = "Lottery"
UpgradePrice = 2500

[node name="Squares" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 290.0
offset_right = 164.0
offset_bottom = 431.0
theme_override_constants/separation = 0
script = ExtResource("5_8kdgp")

[node name="Row1" type="HBoxContainer" parent="Squares"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_constants/separation = 0

[node name="SqUpgrade" parent="Squares/Row1" instance=ExtResource("4_sp2lo")]
layout_mode = 2
text = "test"
UpgradePrice = 25
telupSquareFlag = 1
hoverText = "Bronze Telephone
($25)
Telephone produces twice the profit"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row1/SqUpgrade"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_iidqy")

[node name="SqUpgrade2" parent="Squares/Row1" instance=ExtResource("4_sp2lo")]
layout_mode = 2
UpgradePrice = 500
telupSquareFlag = 10
hoverText = "Silver Telephone
($500)
Telephone produces twice the profit"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row1/SqUpgrade2"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_oybjb")

[node name="SqUpgrade3" parent="Squares/Row1" instance=ExtResource("4_sp2lo")]
layout_mode = 2
UpgradePrice = 2500
telupSquareFlag = 25
hoverText = "Golden Telephone
($2.500)
Telephone produces twice the profit"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row1/SqUpgrade3"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_ucqk5")

[node name="SqUpgrade4" parent="Squares/Row1" instance=ExtResource("4_sp2lo")]
layout_mode = 2
UpgradePrice = 5000000
telupSquareFlag = 50
hoverText = "Ruby Telephone
($5M)
Telephone produces twice the profit"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row1/SqUpgrade4"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_o5265")

[node name="SqUpgrade5" parent="Squares/Row1" instance=ExtResource("4_sp2lo")]
layout_mode = 2
UpgradePrice = 5000000000000
telupSquareFlag = 100
hoverText = "Diamond Telephone
($5T)
Telephone produces twice the profit"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row1/SqUpgrade5"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_ws3kj")

[node name="Row2" type="HBoxContainer" parent="Squares"]
layout_mode = 2

[node name="SqUpgrade6" parent="Squares/Row2" instance=ExtResource("4_sp2lo")]
layout_mode = 2
UpgradePrice = 4218724725952925696
telupSquareFlag = 101
hoverText = "Emerald Telephone
($4218724725952925700)
Telephone produces twice the profit, but you can never buy it lmao"

[node name="Sprite2D" type="Sprite2D" parent="Squares/Row2/SqUpgrade6"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_ve2yn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2wwcs")
volume_db = 12.0

[node name="notEnoughAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_p5a0g")
volume_db = -10.0
pitch_scale = 0.3

[node name="YGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xqmyw")
volume_db = -15.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 82.0
offset_right = 160.0
offset_bottom = 98.0
scale = Vector2(1.25, 1.25)
theme_override_constants/separation = 0

[node name="1x" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_myf4l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xqmyw")
theme_override_styles/hover = SubResource("StyleBoxFlat_p5a0g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myf4l")
icon = ExtResource("8_myf4l")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/1x"]
layout_mode = 0
offset_left = 7.2
offset_top = 2.3999994
offset_right = 43.600002
offset_bottom = 25.4
scale = Vector2(0.5, 0.5)
focus_behavior_recursive = 2
mouse_filter = 2
text = "1x"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="10x" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_myf4l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xqmyw")
theme_override_styles/hover = SubResource("StyleBoxFlat_p5a0g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myf4l")
icon = ExtResource("8_myf4l")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/10x"]
layout_mode = 0
offset_left = 7.2
offset_top = 2.3999994
offset_right = 43.600002
offset_bottom = 25.4
scale = Vector2(0.5, 0.5)
focus_behavior_recursive = 2
mouse_filter = 2
text = "10x"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="50x" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_myf4l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xqmyw")
theme_override_styles/hover = SubResource("StyleBoxFlat_p5a0g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myf4l")
icon = ExtResource("8_myf4l")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/50x"]
layout_mode = 0
offset_left = 7.2
offset_top = 2.3999994
offset_right = 43.600002
offset_bottom = 25.4
scale = Vector2(0.5, 0.5)
focus_behavior_recursive = 2
mouse_filter = 2
text = "50x"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="MAX" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_color = Color(1, 0.39607844, 0.37254903, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_sw5c6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_msgp6")
theme_override_styles/hover = SubResource("StyleBoxFlat_p5a0g")
theme_override_styles/disabled = SubResource("StyleBoxFlat_e23gp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myf4l")
icon = ExtResource("8_myf4l")
flat = true
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MAX"]
layout_mode = 0
offset_left = 7.2
offset_top = 2.3999994
offset_right = 43.600002
offset_bottom = 25.4
scale = Vector2(0.5, 0.5)
focus_behavior_recursive = 2
mouse_filter = 2
text = "MAX"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[connection signal="upgrade_pressed" from="Rectangles/TelephoneUpgrade" to="." method="_on_scall_upgrade_pressed"]
[connection signal="upgrade_pressed" from="Rectangles/EmailUpgrade" to="." method="_on_email_upgrade_pressed"]
[connection signal="upgrade_pressed" from="Rectangles/LotteryUpgrade" to="." method="_on_lotteryup_upgrade_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row1/SqUpgrade" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row1/SqUpgrade2" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row1/SqUpgrade3" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row1/SqUpgrade4" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row1/SqUpgrade5" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="multiplier_pressed" from="Squares/Row2/SqUpgrade6" to="." method="_on_sq_upgrade_multiplier_pressed"]
[connection signal="pressed" from="HBoxContainer/1x" to="." method="_on_x_pressed"]
[connection signal="pressed" from="HBoxContainer/10x" to="." method="_on_10x_pressed"]
[connection signal="pressed" from="HBoxContainer/50x" to="." method="_on_50x_pressed"]
[connection signal="pressed" from="HBoxContainer/MAX" to="." method="_on_max_pressed"]
